# corner-ticketing

./: .gitignore  README.md  gunicorn.config.py  manage.py  pyproject.toml  secret_key.txt
common/: models.py  pagination.py  urls.py  utils.py  views.py
corner_ticketing/: asgi.py  celery.py  locust.py  urls.py  wsgi.py
corner_ticketing/settings/: __init__.py  base.py  development.py  production.py  settings_backup.py
event/: exceptions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
event/migrations/: 0001_initial.py  0002_ticket_regular_price_ticket_sale_price.py  0003_auto_20240723_0647.py
event/services/: ticket_inventory_service.py  ticket_purchase_service.py  ticket_service.py  ticket_transfer_service.py
event/views/: event_views.py  ticket_inventory_views.py  ticket_purchase_views.py  ticket_transfer_views.py  ticket_views.py
templates/email_templates/: ticket_transfer.html
ticket/: exceptions.py  models.py  tasks.py  tests.py  urls.py  views.py
ticket/migrations/: 0001_initial.py
ticket/services/: ticket_inventory_service.py  ticket_purchase_service.py  ticket_service.py  ticket_transfer_service.py
user/: models.py  tasks.py  urls.py  views.py
user/migrations/: 0001_initial.py
